--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bulma": "^0.7.5",
+        "bulma-extensions": "^6.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -23,5 +24,6 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
-    }
+    },
+    "dependencies": []
 }
